[gd_scene load_steps=3 format=3 uid="uid://c660rur1vyob5"]

[ext_resource type="Script" path="res://scenes/ui/PlayerSelectPanel.gd" id="1_6c7s4"]
[ext_resource type="Texture2D" uid="uid://doyw1x000mfn3" path="res://assets/images/stratagems/Rectangle 44.png" id="1_ld2n6"]

[node name="PlayerSelectPanel" type="VBoxContainer"]
offset_left = 40.0
offset_top = 159.0
offset_right = 468.0
offset_bottom = 794.0
script = ExtResource("1_6c7s4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_ld2n6")

[node name="NameLabel" type="Label" parent="TextureRect"]
layout_mode = 2
anchor_right = 1.308
anchor_bottom = 1.073
offset_left = 27.0
offset_top = 69.0
offset_right = -131.824
offset_bottom = -553.282
text = "Enter Name:"

[node name="NameField" type="LineEdit" parent="TextureRect"]
layout_mode = 2
offset_left = 28.0
offset_top = 117.0
offset_right = 389.0
offset_bottom = 166.0
placeholder_text = "Enter name here"
metadata/_edit_use_anchors_ = true

[node name="StratagemLabel" type="Label" parent="TextureRect"]
layout_mode = 2
offset_left = 27.0
offset_top = 193.0
offset_right = 428.0
offset_bottom = 264.0
text = "Select Stratagems:"

[node name="StratagemGrid" type="GridContainer" parent="TextureRect"]
layout_mode = 2
offset_left = 33.0
offset_top = 228.0
offset_right = 428.0
offset_bottom = 360.0
columns = 4

[node name="SelectedLabel" type="Label" parent="TextureRect"]
layout_mode = 2
offset_left = 27.0
offset_top = 364.0
offset_right = 428.0
offset_bottom = 428.0
text = "Selected:"

[node name="SelectedGrid" type="GridContainer" parent="TextureRect"]
layout_mode = 2
offset_left = 33.0
offset_top = 403.0
offset_right = 428.0
offset_bottom = 450.0
